<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <EditTextPreference
        android:defaultValue="@string/pref_display_homeLocation_default"
        android:key="@string/pref_display_homeLocation_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/pref_display_homeLocation_summary_default"
        android:title="@string/pref_display_homeLocation_title" />

    <PreferenceCategory
        android:layout="@layout/preference_category_layout"
        android:title="@string/preferences_units_category_title">

        <ListPreference
            android:defaultValue="@string/pref_temperature_units_default"
            android:entries="@array/pref_temperature_units_values"
            android:entryValues="@array/pref_temperature_units_entries"
            android:key="@string/pref_temperature_units_key"
            android:summary="@string/pref_temperature_units_summary"
            android:title="@string/pref_temperature_units_title" />
        <ListPreference
            android:defaultValue="@string/pref_measurement_units_default"
            android:entries="@array/pref_measurement_units_entries"
            android:entryValues="@array/pref_measurement_units_values"
            android:key="@string/pref_measurement_units_key"
            android:summary="@string/pref_measurement_units_summary"
            android:title="@string/pref_measurement_units_title" />
    </PreferenceCategory>


</PreferenceScreen>